--- a/index.html
+++ b/index.html
@@ -3,36 +3,43 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>register for a course</title>
+    <title>Course Registration</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>   
 </head>
 
-<body ng-controller="AngularJSCtrl">
-    </br>    
-    Submit to A Course:
-    </br>    
-    <form class="form-horizontal" role="form">
-        <label>First Name: </label>
-        <input type="text" name="firstNameText" ng-model="firstNameText" />
-        <label>Last Name: </label>
-        <input type="text" name="lastNameText" ng-model="lastNameText" />
-        <label>Select A course: </label>
-        
-        <select ng-model="selectedCourse">
-            <option ng-repeat="course in coursesArray" value="{{course.title}}">{{course.title}}</option>            
-        </select>
-
-        <p>You have selected: {{ selectedCourse }}</p>
-        <!-- <select ng-model="selectedCourse" ng-options="course.course for course in courses"></select> -->
-        <button type="submit" ng-click="Addcourse()" class="btn btn-primary">Submit</button>
+<body ng-controller="AngularJSCtrl" class="container-fluid">
+    <h1>Course Registration</h1>
+    <br>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="firstNameText" class="col-sm-1 control-label">First Name</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control" id="firstNameText" ng-model="firstNameText" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="lastNameText" class="col-sm-1 control-label">Last Name</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control" id="lastNameText" ng-model="lastNameText" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="courseSelect" class="col-sm-1 control-label">Course</label>
+            <div class="col-sm-3">
+                <select id="courseSelect" class="form-control" ng-model="selectedCourse">
+                    <option ng-repeat="course in coursesArray" value="{{course.title}}">{{course.title}}</option>            
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-1 col-sm-10">
+                <button type="submit" class="btn btn-primary" ng-click="Addcourse()">Register</button>
+            </div>
+        </div>
     </form>
-    <br />
-    <br />
+    <br>
+    <div ng-if="selectedCourse">
+    <h2>Current Registrations</h2>
     <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
@@ -51,6 +58,10 @@
             </tr>
         </tbody>
     </table>  
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>   
 </body>
 
 </html>
