--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </form>
     <br>
-    <div ng-if="selectedCourse">
+    <!-- <div ng-if=""> -->
     <h2>Current Registrations</h2>
     <table class="table table-striped">
         <thead class="thead-dark">
@@ -58,7 +58,7 @@
             </tr>
         </tbody>
     </table>  
-    </div>
+    <!-- </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>   
