--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <td>{{course.id}}</td>
                 <td>{{course.student_firstName}}</td>
                 <td>{{course.student_lastName}}</td>
-                <td>{{curse.curse}}</td>
+                <td>{{course.course}}</td>
             </tr>
         </tbody>
     </table>  
